maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
  setIndication(0,0)
}